--- a/Technical Documentation Page/index.html
+++ b/Technical Documentation Page/index.html
@@ -41,6 +41,17 @@
                     <input type="text">
                 </div>
             </form>
+	    <div id="theme">
+       <i class="fa-solid fa-sun"></i>
+       <label class="switch">
+
+        <input onclick= "darkMode()" type="checkbox" checked>
+
+        <span class="slider round"></span>
+
+      </label>
+       <i class="fa-solid fa-moon"></i>
+       </div>
         </nav>
         <section id="Introduction" class="main-section">
             <header class="section-header"><h2>Introduction</h2></header>
