--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -55,7 +55,7 @@
 <!--ABOUT SECTION-->
             <div id="about" class="about">
                 <div id="about-text">
-                    <h2>About Me</h2>
+                    <h2 class="inner-title">About Me</h2>
                     <p>
                         placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
                         placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
@@ -65,7 +65,7 @@
                     <span class="material-icons arrow">undo</span>
                 </div>
                 <div id="about-skills">
-                    <h2>My Skillset</h2>
+                    <h2 class="inner-title">My Skillset</h2>
                     <div id="skills" >
                         <div class="skill-tile skill1" id="skill1"><i class="fa-brands fa-html5"></i>
                             <h3 class="skill-type">HTML5</h3>
@@ -236,13 +236,20 @@
             </div>
         
 </main>
-    <a id="back-to-top" href="#welcome-section">
-    <i class="fa-solid fa-arrow-up"></i>
-    <span>Back to top</span>
-    </a> 
-    <footer>
-    </footer>
 
+<!--FOOTER-->
+<footer id="footer">
+    <div class="footer-box">
+        <p id="footer-text">  Designed and Developed ; Awoyemi Abiola, 2022 </p>
+    </div>
+</footer>
+
+
+ <!--BACT TO TOP BUTTON-->   
+    <a id="back-to-top" href="#welcome-section">
+        <i class="fa-solid fa-arrow-up"></i>
+        <span>Back to top</span>
+    </a> 
 </div>
 
 </body>
