--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -14,7 +13,7 @@
     <script src="https://kit.fontawesome.com/2c69f58432.js" crossorigin="anonymous"></script>
     <title>callmebiola</title>
 </head>
-<body>
+<body id="body-light">
     <div id="wrapper">
 <!--HEADER, CONTAINS NAVBAR ONLY-->
         <header>
@@ -55,10 +54,10 @@
 <main id="main-wrapper">
 
 <!--WELCOME SECTION/BANNER-->       
-            <section id="welcome-section">
+            <section id="welcome-section" class="hero">
                 <div id="welcome-inner-box">
                 <h1 id="welcome-text">
-                    Hi, I'm Biola, Your Next Front-end Web developer ;)
+                    Hi, I'm Biola, Your Next  Front-end Web developer ;)
                 </h1>
                 <a id="hire" class="hire-btn" href="#contact">Hire Me</a>
                 </div>
@@ -74,7 +73,7 @@
                         placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
                         placeholder placeholder, placeholder below.
                     </p>
-                    <span class="material-icons arrow">undo</span>
+
                 </div>
                 <div id="about-skills">
                     <h2 class="inner-title">My Skillset</h2>
@@ -111,7 +110,7 @@
  <!--PROJECTS SECTION-->           
             <div id="projects" class="project-box">
 
-                <h2 class="inner-title">Projects</h2>
+                <h2 id="projects-title"  class="inner-title">Projects</h2>
 
                 <div id="projects-inner-div">
 
@@ -242,7 +241,7 @@
             <div id="contact" class="contact-box">
                 <div id="contact-card">
                     <div id="contact-text">
-                        <h2 class="inner-title" >Contact Me</h2>  
+                        <h2 id="contact-title" class="inner-title" >Contact Me</h2>  
                         <p>I'm Currently Open to Entry-level Front-end roles, Internships, and/or any relevant projects.
                             If you would like to connect or work with me for any of the positions above, feel free to contact me through ; 
                         </p>
@@ -276,6 +275,51 @@
     </a> 
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
+
+<script type="text/javascript">
+
+    gsap.timeline({
+
+        scrollTrigger: {
+            trigger: ".about",
+            start: "center center",
+            end: "bottom center",
+            scrub: true,
+            markers : false,
+            pin : true
+        }
+    })
+    .from(".skill1", {x: innerWidth * 1})
+    .from(".skill2", {x: innerWidth * 1})
+    .from(".skill3", {x: innerWidth * 1})
+    .from(".skill4", {x: innerWidth * 1})
+
+    gsap.timeline({
+
+    scrollTrigger: {
+    trigger: ".hero",
+    start: "+=200px",
+    end: "+=300px",
+    scrub: true
+}
+})
+.to(".hero", {opacity: 0})
+
+const boxes = gsap.utils.toArray('.project-case');
+
+boxes.forEach((box, i) => {
+  const anim = gsap.fromTo(box, {autoAlpha: 0, y: 50}, {duration: 1, autoAlpha: 1, y: 0});
+  ScrollTrigger.create({
+    trigger: box,
+    animation: anim,
+    toggleActions: 'play none none none',
+    once: true,
+  });
+});
+
+</script>
 </body>
 </html>
 
