--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
@@ -80,15 +81,15 @@
                 <div id="about-skills">
                     <h2 class="inner-title">My Skillset</h2>
                     <div id="skills" >
-                        <div class="skill-tile skill1" id="skill1"><i class="fa-brands fa-html5"></i>
+                        <div class="skill-tile skill1" id="skill1"><i class="fg-text fa-brands fa-html5"></i>
                             <h3 class="skill-type">HTML5</h3>
                             <i class="fa-solid fa-code bg-text"></i>
                         </div>
-                        <div class= "skill-tile skill2" id="skill2"><i class="fa-brands fa-css3-alt"></i>
+                        <div class= "skill-tile skill2" id="skill2"><i class="fg-text fa-brands fa-css3-alt"></i>
                             <h4 class="skill-type">CSS 3</h4>
                             <i class="fa-brands fa-css3 bg-text"></i>
                         </div>
-                        <div class=" skill-tile skill3" id="skill3"><i class="fa-brands fa-js"></i>
+                        <div class=" skill-tile skill3" id="skill3"><i class=" fg-text fa-brands fa-js"></i>
                             <h5 class="skill-type">Javascript</h5>
                             <span class="material-icons bg-text">data_object</span>
                         </div>
@@ -121,8 +122,12 @@
                             <h2 class="project-title">Online Store Landing Page</h2>
                             <p class="project-info">placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
                             placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below.</p>
-                            <h4>Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-js"></i></h4>
+                            placeholder placeholder, placeholder below.
+                            <br>
+                            <br>
+                            Hover on desktop, Tap on Mobile to play Demo
+                            </p>
+                            <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-js"></i></h4>
                         </div>
                         
                         <div id="project1" class="project-tile">
@@ -143,8 +148,13 @@
                             <h2 class="project-title">Video Games' Review Multi-page Website</h2>
                             <p class="project-info">placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
                             placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below.</p>
-                            <h4>Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
+                            placeholder placeholder, placeholder below.
+                            <br>
+                            <br>
+                            Hover on desktop, Tap on Mobile to play Demo
+                            </p>
+
+                            <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
                         </div>
                         <div id="project2" class="project-tile">
                             <div class="video haven-video">
@@ -164,8 +174,13 @@
                             <h2 class="project-title">Technical Documentation Page</h2>
                             <p class="project-info">placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
                             placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below.</p>
-                            <h4>Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-js"></i></h4>
+                            placeholder placeholder, placeholder below.
+                            <br>
+                            <br>
+                            Hover on desktop, Tap on Mobile to play Demo
+                            </p>
+
+                            <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-js"></i></h4>
                         </div>
                         <div id="project3" class="project-tile">
                             <div class="video tdp-video">
@@ -185,8 +200,13 @@
                             <h2 class="project-title">ToDo App</h2>
                             <p class="project-info">placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
                             placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below.</p>
-                            <h4>Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-js"></i></h4>
+                            placeholder placeholder, placeholder below.
+                            <br>
+                            <br>
+                            Hover on desktop, Tap on Mobile to play Demo
+                            </p>
+
+                            <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-js"></i></h4>
                         </div>
                         <div id="project4" class="project-tile">
                             <div class="video todo-video">
@@ -206,8 +226,13 @@
                             <h2 class="project-title">Google Homepage Clone</h2>
                             <p class="project-info">placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
                             placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below.</p>
-                            <h4>Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
+                            placeholder placeholder, placeholder below.
+                            <br>
+                            <br>
+                            Hover on desktop, Tap on Mobile to play Demo
+                            </p>
+
+                            <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
                         </div>
                         <div id="project5" class="project-tile">
                             <div class="video google-video">
@@ -266,6 +291,10 @@
 <footer id="footer">
     <div class="footer-box">
         <p id="footer-text">  Designed and Developed ; Awoyemi Abiola, 2022 </p>
+        <div id="footer-other">
+            <a id="footer-link1" href="#">Known Issues</a> 
+           <a id="footer-link2" href="#">Report an Issue ?</a>  
+        </div>
     </div>
 </footer>
 
