--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -27,10 +27,10 @@
                 </div>
 
                   <ul id="nav">
-                    <li><a id="link1" href="#about">About</a></li>
-                    <li><a id="link2" href="#projects">Projects</a></li>
-                    <li><a id="link3" href="#up-to">Currently Learning</a></li>
-                    <li><a id="link4" href="#contact">Contact</a></li>
+                    <li><a id="link1" href="#ft-about">About</a></li>
+                    <li><a id="link2" href="#ft-projects">Projects</a></li>
+                    <li><a id="link3" href="#ft-upto">Currently Learning</a></li>
+                    <li><a id="link4" href="#ft-contact">Contact</a></li>
                   </ul>
    
             
@@ -62,12 +62,13 @@
                 <h1 id="welcome-text">
                     Hi, I'm Biola, Your Next  Front-end Web developer ;)
                 </h1>
-                <a id="hire" class="hire-btn" href="#contact">Hire Me</a>
+                <a id="hire" class="hire-btn" href="#ft-contact">Hire Me</a>
                 </div>
             </section>
 
 <!--ABOUT SECTION-->
             <section id="about" class="about">
+                <span class="faux-top" id="ft-about"></span>
                 <div id="about-text">
                     <h2 class="inner-title">About Me</h2>
                     <p class="about-me">
@@ -132,14 +133,42 @@
                 </div> 
             </section>
 
- <!--PROJECTS SECTION-->           
+ <!--PROJECTS SECTION-->   
+ 
             <section id="projects" class="project-box">
-
+                <span class="faux-top" id="ft-projects"></span>
                 <h2 id="projects-title"  class="inner-title">Projects</h2>
 
                 <div id="projects-inner-div">
 
                     <div class="project-case odd">
+                        <div class="project-desc">
+                            <h2 class="project-title">Haven - Video Games' Review Website</h2>
+                            <p class="project-info">Haven is a fully responsive Video Game Review Multi-Page Website. This was the first major personal project
+                                I worked on after i started learning Front-end development in 2020.
+                                <br><br>
+                                I was able to apply my knowledge on the basics of HTML and CSS, CSS Properties and Values, pseudo-elements (You can tell from the demo I had a lot of fun using the ::hover CSS pseudo element), webpage structuring, as well as site responsiveness with the use of CSS media queries.
+                            <br>
+                            <br>
+                            Hover on desktop, Tap on Mobile to play Demo
+                            </p>
+
+                            <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
+                        </div>
+                        <div id="project2" class="project-tile">
+                            <div class="video haven-video">
+                                <video class="proj-demo" loop preload="none" muted="true">
+                                  <source src="images/haven.webm" type="video/webm">
+                                </video>
+                            </div>
+                            <div class="proj-link-container">
+                                <a id="proj-link3" href="#"class="project-link left-link github">Visit Site</a>
+                                <i class="fa-brands fa-github"></i>
+                                <a id="proj-link4" href="#"class="project-link right-link github-source">Source Code</a>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="project-case even">
                         <div class="project-desc">
                             <h2 class="project-title">3Buy3 - Speedcube Store Landing Page</h2>
                             <p class="project-info"> This is a fully responsive landing page for a speedcube online Store, Complete with a 
@@ -165,36 +194,36 @@
                                 <i class="fa-brands fa-codepen"></i>
                                 <a id="proj-link2" href="#"class="project-link right-link github-source">Source Code</a>
                             </div>
-                        </div>
+                        </div>  
                     </div>
-                    <div class="project-case even">
+                    <div class="project-case odd">
                         <div class="project-desc">
-                            <h2 class="project-title">Haven - Video Games' Review Website</h2>
-                            <p class="project-info">Haven is a fully responsive Video Game Review Multi-Page Website. This was the first major personal project
-                                I worked on after i started learning Front-end development in 2020.
-                                <br><br>
-                                I was able to apply my knowledge on the basics of HTML and CSS, CSS Properties and Values, pseudo-elements (You can tell from the demo I had a lot of fun using the ::hover CSS pseudo element), webpage structuring, as well as site responsiveness with the use of CSS media queries.
+                            <h2 class="project-title">ToDo App</h2>
+                            <p class="project-info">placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
+                            placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
+                            placeholder placeholder, placeholder below.
                             <br>
                             <br>
                             Hover on desktop, Tap on Mobile to play Demo
                             </p>
 
-                            <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
+                            <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-js"></i></h4>
                         </div>
-                        <div id="project2" class="project-tile">
-                            <div class="video haven-video">
+                        <div id="project4" class="project-tile">
+                            <div class="video todo-video">
                                 <video class="proj-demo" loop preload="none" muted="true">
-                                  <source src="images/haven.webm" type="video/webm">
+                                  <source src="images/todo.webm" type="video/webm">
                                 </video>
                             </div>
                             <div class="proj-link-container">
-                                <a id="proj-link3" href="#"class="project-link left-link github">Visit Site</a>
+                                <a id="proj-link7" href="#"class="project-link left-link github">Visit Site</a>
                                 <i class="fa-brands fa-github"></i>
-                                <a id="proj-link4" href="#"class="project-link right-link github-source">Source Code</a>
+                                <a id="proj-link8" href="#"class="project-link right-link github-source">Source Code</a>
                             </div>
                         </div>
+                       
                     </div>
-                    <div class="project-case odd">
+                    <div class="project-case even">
                         <div class="project-desc">
                             <h2 class="project-title">Technical Documentation Page</h2>
                             <p class="project-info">placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
@@ -220,41 +249,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-case even">
-                        <div class="project-desc">
-                            <h2 class="project-title">ToDo App</h2>
-                            <p class="project-info">placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below.
-                            <br>
-                            <br>
-                            Hover on desktop, Tap on Mobile to play Demo
-                            </p>
-
-                            <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-js"></i></h4>
-                        </div>
-                        <div id="project4" class="project-tile">
-                            <div class="video todo-video">
-                                <video class="proj-demo" loop preload="none" muted="true">
-                                  <source src="images/todo.webm" type="video/webm">
-                                </video>
-                            </div>
-                            <div class="proj-link-container">
-                                <a id="proj-link7" href="#"class="project-link left-link github">Visit Site</a>
-                                <i class="fa-brands fa-github"></i>
-                                <a id="proj-link8" href="#"class="project-link right-link github-source">Source Code</a>
-                            </div>
-                        </div>
-                    </div>
                     <div class="project-case odd">
                         <div class="project-desc">
                             <h2 class="project-title">Google Homepage Clone</h2>
-                            <p class="project-info">A relatively simple addition to my projects' showcase ; A clone of the Google Search
+                            <p class="project-info">A relatively simple addition to my projects' showcase ; A pixel-perfect clone of the Google Search
                                 homepage built as part of a set of tasks in a public Internship i underwent in 2021.
                                 <br><br>
                                 I've added it to my showcase to provide a represention of what i described earlier as a "near-obsessive"
-                                attention to detail. The clone is nothing short of pixel-perfection when compared to the original. I don't need 
-                                a design to build beautiful interfaces, but I believe this shows I'm capable of deleivering every detail down to the 
+                                attention to detail. I wouldn't need a design to build beautiful interfaces, but I believe this shows I'm capable of deleivering every detail down to the 
                                 last pixel if i ever have to convert one.
                             <br>
                             <br>
@@ -283,6 +285,7 @@
 
 <!--UPTO SECTION-->            
             <section id="up-to" class="upto-box">
+                <span class="faux-top" id="ft-upto"></span>
                 <div class="inner-div">
                     <h2 class="inner-title">What am i up to ?</h2>
                     <p>
@@ -295,6 +298,7 @@
 
 <!--CONTACT SECTION-->
             <section id="contact" class="contact-box">
+                <span class="faux-top" id="ft-contact"></span>
                 <div id="contact-card">
                     <div id="contact-text">
                         <h2 id="contact-title" class="inner-title" >Contact Me</h2>  
