--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -152,7 +152,7 @@
                             <br>
                             Hover on desktop, Tap on Mobile to play Demo
                             </p>
-
+                            <h2 class="proj-number" >1</h2>
                             <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
                         </div>
                         <div id="project2" class="project-tile">
@@ -180,6 +180,7 @@
                             <br>
                             Hover on desktop, Tap on Mobile to play Demo
                             </p>
+                            <h2 class="proj-number" >2</h2>
                             <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
                         </div>
                         
@@ -206,7 +207,7 @@
                             <br>
                             Hover on desktop, Tap on Mobile to play Demo
                             </p>
-
+                            <h2 class="proj-number" >3</h2>
                             <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-js"></i></h4>
                         </div>
                         <div id="project4" class="project-tile">
@@ -234,6 +235,7 @@
                             Hover on desktop, Tap on Mobile to play Demo
                             </p>
 
+                            <h2 class="proj-number" >4</h2>
                             <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-js"></i></h4>
                         </div>
                         <div id="project3" class="project-tile">
@@ -262,7 +264,7 @@
                             <br>
                             Hover on desktop, Tap on Mobile to play Demo
                             </p>
-
+                            <h2 class="proj-number" >5</h2>
                             <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
                         </div>
                         <div id="project5" class="project-tile">
@@ -283,18 +285,18 @@
 
             </section>
 
-<!--UPTO SECTION-->            
+<!--UPTO SECTION         
             <section id="up-to" class="upto-box">
                 <span class="faux-top" id="ft-upto"></span>
                 <div class="inner-div">
                     <h2 class="inner-title">What am i up to ?</h2>
                     <p>
-                        placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below.
+                        I'm big on <em>'There's always room for Improvement' </em>, and as a developer who only just started
+                        making headway, you can imagine said "room" is quite large. 
+                        I'm current
                     </p>
                 </div>
-            </section>
+            </section>-->   
 
 <!--CONTACT SECTION-->
             <section id="contact" class="contact-box">
