--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -150,7 +150,7 @@
                                 I was able to apply my knowledge on the basics of HTML and CSS, CSS Properties and Values, pseudo-elements (You can tell from the demo I had a lot of fun using the ::hover CSS pseudo element), webpage structuring, as well as site responsiveness with the use of CSS media queries.
                             <br>
                             <br>
-                            Hover on desktop, Tap on Mobile to play Demo
+                            <em>Hover on desktop, Tap on Mobile to play Demo</em>
                             </p>
                             <h2 class="proj-number" >1</h2>
                             <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
@@ -178,7 +178,7 @@
                                 Site Responsiveness. A fully functional carting feauture with Javascript (and and a corresponding page) is currently in development.
                             <br>
                             <br>
-                            Hover on desktop, Tap on Mobile to play Demo
+                            <em>Hover on desktop, Tap on Mobile to play Demo</em>
                             </p>
                             <h2 class="proj-number" >2</h2>
                             <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
@@ -200,12 +200,15 @@
                     <div class="project-case odd">
                         <div class="project-desc">
                             <h2 class="project-title">ToDo App</h2>
-                            <p class="project-info">placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below.
+                            <p class="project-info">My first implentation of Javascript in a project, a simple ToDo App I built to apply 
+                                newly gained Knowledge from a Javascript Basics course. It consists of all four feautures for a CRUD Application.
+                                <br><br>  
+                                Apart from the knowledge gained and applied on CRUD concepts, I was also able to apply knowledge on manipulation
+                                of HTML's Document Object Model with Javascript, or put simply, DOM manipulation, an important aspect of Javascript's Application
+                                in web development.
                             <br>
                             <br>
-                            Hover on desktop, Tap on Mobile to play Demo
+                            <em>Hover on desktop, Tap on Mobile to play Demo</em>                            
                             </p>
                             <h2 class="proj-number" >3</h2>
                             <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-js"></i></h4>
@@ -226,13 +229,17 @@
                     </div>
                     <div class="project-case even">
                         <div class="project-desc">
-                            <h2 class="project-title">Technical Documentation Page</h2>
-                            <p class="project-info">placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below. placeholder placeholder placeholder, place hold er, pla ceholder, and plac eholdering.
-                            placeholder placeholder, placeholder below.
+                            <h2 class="project-title">CSS Technical Documentation Page</h2>
+                            <p class="project-info"> A docmentations page for CSS, i built this as part of A set of projects on a course on responsive web design, it's completely
+                                responsive, and features a working dark mode funnction, I had always wanted to implement a darkmode feature,
+                                and figured i would be able to do it when i understood enough of javascript so being able to implement it in this project independently was a major moment of 
+                                progress for me, other feautures include a custom scrollbar, and a functional back to top button.
+                                <br><br>
+                                This project also helped me get a better understanding of the CSS Positioning property and all its possible
+                                values.
                             <br>
                             <br>
-                            Hover on desktop, Tap on Mobile to play Demo
+                            <em>Hover on desktop, Tap on Mobile to play Demo</em>
                             </p>
 
                             <h2 class="proj-number" >4</h2>
@@ -262,7 +269,7 @@
                                 last pixel if i ever have to convert one.
                             <br>
                             <br>
-                            Hover on desktop, Tap on Mobile to play Demo
+                            <em>Hover on desktop, Tap on Mobile to play Demo</em>
                             </p>
                             <h2 class="proj-number" >5</h2>
                             <h4 class="built-with">Built with <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></h4>
