--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -16,7 +16,17 @@
     <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
     <title>callmebiola</title>
 </head>
-<body id="body-light">
+<div id="preloader">
+    <h2 id="loading-text">one sec...</h2>
+    <div id="cradle">
+        <div id="start" class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div id="end" class="ball"></div>
+        </div>
+</div>
+<body class="no-scroll" id="body-light">
     <div id="wrapper">
 <!--HEADER, CONTAINS NAVBAR ONLY-->
         <header>
