--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -17,12 +17,12 @@
     <title>callmebiola</title>
 </head>
 <div id="preloader">
-    <h2 id="loading-text">one sec...</h2>
+    <h2 id="loading-text" class="loading-text">one sec...</h2>
     <div id="cradle">
         <div id="start" class="ball"></div>
-        <div class="ball"></div>
-        <div class="ball"></div>
-        <div class="ball"></div>
+        <div class="ball" id="ball1"></div>
+        <div class="ball" id="ball2"></div>
+        <div class="ball" id="ball3"></div>
         <div id="end" class="ball"></div>
         </div>
 </div>
@@ -301,18 +301,7 @@
 
             </section>
 
-<!--UPTO SECTION         
-            <section id="up-to" class="upto-box">
-                <span class="faux-top" id="ft-upto"></span>
-                <div class="inner-div">
-                    <h2 class="inner-title">What am i up to ?</h2>
-                    <p>
-                        I'm big on <em>'There's always room for Improvement' </em>, and as a developer who only just started
-                        making headway, you can imagine said "room" is quite large. 
-                        I'm current
-                    </p>
-                </div>
-            </section>-->   
+
 
 <!--CONTACT SECTION-->
             <section id="contact" class="contact-box">
