--- a/Product Landing Page 2.0/index.html
+++ b/Product Landing Page 2.0/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="https://imgur.com/CoaU1KH.png">
     <script src="https://kit.fontawesome.com/2c69f58432.js" crossorigin="anonymous"></script>
@@ -73,6 +73,13 @@
                     <div class="item-desc">
                         <p>XMan Tornado</p>
                         <h3><s><span class="discount">$35.99</span></s>$29.99</h3>
+                        <div class="cart-box">
+                            <a class="cart-add" href="#">Add to cart</a>
+                            <label for="number" id="qty-label">
+                                <input type="number" id="number" class="cart-qty" placeholder="QTY" min="1">
+                            </label>
+                        </div>
+                        
                     </div>
                 </div>
                 <div class="sales-item">
@@ -80,6 +87,12 @@
                     <div class="item-desc">
                         <p>Peak S3R</p>
                         <h3><s><span class="discount">$49.99</span></s>$39.99</h3>
+                        <div class="cart-box">
+                            <a class="cart-add" href="#">Add to cart</a>
+                            <label for="number" id="qty-label">
+                                <input type="number" id="number" class="cart-qty" placeholder="QTY" min="1">
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="sales-item">
@@ -87,6 +100,12 @@
                     <div class="item-desc">
                         <p>Moyu RS3M 2020</p>
                         <h3><s><span class="discount"></span></s>$24.99</h3>
+                        <div class="cart-box">
+                            <a class="cart-add" href="#">Add to cart</a>
+                            <label for="number" id="qty-label">
+                                <input type="number" id="number" class="cart-qty" placeholder="QTY" min="1">
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="sales-item" >
@@ -94,6 +113,12 @@
                     <div class="item-desc">
                         <p>Gan 12 Maglev</p>
                         <h3><s><span class="discount">$79.99</span></s>$69.99</h3>
+                        <div class="cart-box">
+                            <a class="cart-add" href="#">Add to cart</a>
+                            <label for="number" id="qty-label">
+                                <input type="number" id="number" class="cart-qty" placeholder="QTY" min="1">
+                            </label>
+                        </div>
                     </div>
               </div>
             </div>
@@ -104,6 +129,12 @@
                     <div class="item-desc">
                         <p>Valk Elite M</p>
                         <h3><s><span class="discount">$59.99</span></s>$44.99</h3>
+                        <div class="cart-box">
+                            <a class="cart-add" href="#">Add to cart</a>
+                            <label for="number" id="qty-label">
+                                <input type="number" id="number" class="cart-qty" placeholder="QTY" min="1">
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="sales-item" id="oos">
@@ -119,13 +150,25 @@
                     <div class="item-desc">
                         <p>Moyu GTS3M</p>
                         <h3><s><span class="discount">$39.99</span></s>$34.99</h3>
+                        <div class="cart-box">
+                            <a class="cart-add" href="#">Add to cart</a>
+                            <label for="number" id="qty-label">
+                                <input type="number" id="number" class="cart-qty" placeholder="QTY" min="1">
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="sales-item" >
                     <div class="item-pic" id="prod8"></div>
                     <div class="item-desc">
-                        <p>XMan Tornado V2M</p>
+                        <p>Tornado V2M</p>
                         <h3><s><span class="discount">$59.99</span></s>$49.99</h3>
+                        <div class="cart-box">
+                            <a class="cart-add" href="#">Add to cart</a>
+                            <label for="number" id="qty-label">
+                                <input type="number" id="number" class="cart-qty" placeholder="QTY" min="1">
+                            </label>
+                        </div>
                     </div>
                 </div>
             <div id="more">
