--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/2c69f58432.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
+    <link rel="icon" type="image/x-icon" sizes="100x100" href="images/favicon.PNG">
     <title>Abiola Awoyemi</title>
 </head>
 
